add role and config something

--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -24,7 +24,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
-                <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
+                <select asp-for="AuthorId" class="form-control" asp-items="@(ViewData["AuthorId"] as SelectList)">
+                    <option value="">-- Select Author --</option>
+                </select>
+                <span asp-validation-for="AuthorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
