--- a/Views/Roles/Create.cshtml
+++ b/Views/Roles/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserRole" class="control-label"></label>
-                <select asp-for="UserRole" class="form-control"></select>
+                <select asp-for="UserRole" class="form-control" asp-items="ViewBag.RoleOptions"></select>
                 <span asp-validation-for="UserRole" class="text-danger"></span>
             </div>
             <div class="form-group">
