--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -33,6 +33,18 @@
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Roles</label>
+                <div>
+                    @foreach (var role in (List<LibrarySystem.Models.Role>)ViewBag.Roles)
+                    {
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="selectedRoles" value="@role.Id" id="role_@role.Id" />
+                            <label class="form-check-label" for="role_@role.Id">@role.UserRole</label>
+                        </div>
+                    }
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
