--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -51,7 +51,7 @@
             <form id="deleteForm" method="post">
                 <div class="modal-header bg-primary text-white">
                     <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
