--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -7,35 +7,53 @@
 <div class="container mt-4 p-4 rounded shadow-sm" style="background-color: #f8f9fa;">
 	<h1 class="mb-4">Book Details</h1>
 
-	<dl class="row">
-		<dt class="col-sm-3">
-			@Html.DisplayNameFor(model => model.Title)
-		</dt>
-		<dd class="col-sm-9">
-			@Html.DisplayFor(model => model.Title)
-		</dd>
+	<div class="row" style="min-height: 400px;">
+		<!-- Left Side: Book Info -->
+		<div class="col-md-7 d-flex flex-column justify-content-between">
+			<div>
+				<dl class="row">
+					<dt class="col-sm-4">
+						@Html.DisplayNameFor(model => model.Title)
+					</dt>
+					<dd class="col-sm-8">
+						@Html.DisplayFor(model => model.Title)
+					</dd>
 
-		<dt class="col-sm-3">
-			@Html.DisplayNameFor(model => model.Description)
-		</dt>
-		<dd class="col-sm-9">
-			@Html.DisplayFor(model => model.Description)
-		</dd>
+					<dt class="col-sm-4">
+						@Html.DisplayNameFor(model => model.Description)
+					</dt>
+					<dd class="col-sm-8">
+						@Html.DisplayFor(model => model.Description)
+					</dd>
 
-		<dt class="col-sm-3">
-			Author
-		</dt>
-		<dd class="col-sm-9">
-			@Model.Author?.Name
-		</dd>
-	</dl>
+					<dt class="col-sm-4">
+						Author
+					</dt>
+					<dd class="col-sm-8">
+						@Model.Author?.Name
+					</dd>
+				</dl>
+			</div>
 
-	@if (Model.Image != null)
-	{
-		<img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)" alt="Book Image" class="img-thumbnail" style="width:200px; height:auto;" />
-	}
-	<div class="d-flex gap-2 mt-4">
-		<a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
-		<a asp-action="Index" class="btn btn-secondary">Back to List</a>
+			<!-- Buttons at the very bottom -->
+			<div class="d-flex gap-2 pt-3">
+				<a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
+				<a asp-action="Index" class="btn btn-secondary">Back to List</a>
+			</div>
+		</div>
+
+		<!-- Right Side: Image Display -->
+		<div class="col-md-5 d-flex align-items-center justify-content-center">
+			@if (Model.Image != null)
+			{
+				<img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)"
+					 class="rounded shadow img-fluid"
+					 style="max-height: 400px; width: auto;" />
+			}
+			else
+			{
+				<p class="text-muted">No image available</p>
+			}
+		</div>
 	</div>
 </div>
