--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -63,7 +63,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-						<button type="submit" class="btn btn-primary">Delete</button>
+						<button type="submit" class="btn btn-danger">Delete</button>
 					</div>
 				</form>
 			</div>
