Add image for author and config home page for show book and author image

--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -48,7 +48,7 @@
 			{
 				<img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)"
 					 class="rounded shadow img-fluid"
-					 style="max-height: 400px; width: auto;" />
+					 style="height: 400px; width: auto;" />
 			}
 			else
 			{
