--- a/Views/Authors/Details.cshtml
+++ b/Views/Authors/Details.cshtml
@@ -7,18 +7,46 @@
 <div class="container mt-4 p-4 rounded shadow-sm" style="background-color: #f8f9fa;">
     <h1 class="mb-4">Author Details</h1>
 
-    <div class="mb-4">
-        <dl class="row">
-            <dt class="col-sm-3">Name</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(model => model.Name)</dd>
+    <div class="row" style="min-height: 400px;">
+        <!-- Left Side: Author Info -->
+        <div class="col-md-7 d-flex flex-column justify-content-between">
+            <div>
+                <dl class="row">
+                    <dt class="col-sm-4">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
+                    <dd class="col-sm-8">
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-            <dt class="col-sm-3">Description</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(model => model.Description)</dd>
-        </dl>
-    </div>
+                    <dt class="col-sm-4">
+                        @Html.DisplayNameFor(model => model.Description)
+                    </dt>
+                    <dd class="col-sm-8">
+                        @Html.DisplayFor(model => model.Description)
+                    </dd>
+                </dl>
+            </div>
 
-    <div class="d-flex gap-2">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            <!-- Buttons at the bottom -->
+            <div class="d-flex gap-2 pt-3">
+                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            </div>
+        </div>
+
+        <!-- Right Side: Image Display -->
+        <div class="col-md-5 d-flex align-items-center justify-content-center">
+            @if (Model.Image != null)
+            {
+                <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)"
+                     class="rounded shadow img-fluid"
+                     style="height: 400px; width: auto;" />
+            }
+            else
+            {
+                <p class="text-muted">No image available</p>
+            }
+        </div>
     </div>
 </div>
