--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -49,7 +49,7 @@
 
 			<!-- Right Side: Image Display -->
 			<div class="col-md-5 d-flex align-items-center justify-content-center">
-				<img id="ImagePreview" class="rounded shadow img-fluid" style="max-height: 400px; width: auto; display: none;" />
+				<img id="ImagePreview" class="rounded shadow img-fluid" style="height: 400px; width: auto; display: none;" />
 				<p id="NoImageText" class="text-muted" style="display: none;">No image selected</p>
 			</div>
 		</div>
